--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,4 @@ $RECYCLE.BIN/
 # Android studio 3.1+ serialized cache file
 /.idea/caches/build_file_checksums.ser
 .idea/
+Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Electronic Highway Sign SDF.asset
